# Irves-Intelligent-security-research-platform

./: .env.docker.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_PLAN.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  install.ps1  install.sh  irves.service  nginx.conf  package-lock.json  package.json  plan.md  test_frida_fix.py  v1_release_checklist.md
.claude/: settings.local.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  desktop.yml  docker.yml  release.yml  tauri.yml
backend/: .env.example  =1.24.0  config.py  generate_secret.py  main.py  requirements.txt  setup_tools.py  test_db.py
backend/ai_modules/: __init__.py  cost_tracker.py  generation_module.py  llm_client.py  parsing_module.py  reasoning_module.py
backend/ast_engine/: __init__.py  manager.py  models.py  templates.py
backend/database/: __init__.py  connection.py  crud.py  models.py
backend/models/: __init__.py  finding.py  project.py  report.py  scan.py
backend/parsers/: __init__.py  adapter.py  base.py  registry.py
backend/routes/: __init__.py  ai_module_routes.py  analysis.py  ast_routes.py  auth.py  correlation_routes.py  docs.py  events.py  network.py  reports.py  repository_routes.py  runtime.py  scan.py  session_routes.py  (+2 more)
docs/: api.md  architecture.md  network-intercept.md  runtime-workspace.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
(+116 files in other folders)
