[package]
name = "irves"
version = "0.1.0"
edition = "2021"

[lib]
name = "irves_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "irves"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri    = { version = "2", features = [] }
serde    = { version = "1", features = ["derive"] }
serde_json = "1"

# Used to spawn and manage the FastAPI backend process
tokio = { version = "1", features = ["full"] }
